--- a/vue-chess/server/package.json
+++ b/vue-chess/server/package.json
@@ -26,7 +26,7 @@
     "hiredis": "^0.5.0",
     "jsonwebtoken": "latest",
     "moment": "^2.12.0",
-    "mongoose": "5.0",
+    "mongoose": "^4.9.0",
     "mongoose-unique-validator": "^1.0.2",
     "morgan": "latest",
     "redis": "^2.6.2",
