--- a/kube/vue-chess.yaml
+++ b/kube/vue-chess.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: vue-chess
-          image: vue-chess
+          image: zallegro/vue-chess-img
           ports:
             - containerPort: 3311
           env:
