--- a/kube/vue-chess.yaml
+++ b/kube/vue-chess.yaml
@@ -32,4 +32,4 @@ spec:
           env:
             - name: MONGO_URL
               value: mongodb://mongo:27017/vuegustchess
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
