--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '14.x'
 
       - name: npm install, build, and test
+        run: cd vue-chess/server
         run: |
           npm install
           npm run build --if-present
