--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           cd vue-chess/server
           npm install
-          npm run build --if-present
-          npm run test --if-present
+         # npm run build --if-present
+         # npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
