--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -15,7 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+     
+      - name: Run a multi-line script
+        run: |
+         echo test the checkout action,
+         ls -a
+     
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
@@ -23,9 +28,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd vue-chess
+          cd vue-chess/server
           npm install
-          npm run build --if-present
+         # npm run build --if-present
          # npm run test --if-present
 
       - name: Upload artifact for deployment job
