--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -26,12 +26,21 @@ jobs:
         with:
           node-version: '10.x'
 
-      - name: npm install, build, and test
-        run: |
-          cd vue-chess/server
-          npm install
-         # npm run build --if-present
-         # npm run test --if-present
+      - uses: bahmutov/npm-install@v1
+        env:
+            NODE_ENV: production
+        with:
+          working-directory: .
+      - uses: bahmutov/npm-install@v1
+        with:
+          working-directory: server
+
+      - name: Run build
+        run: npm ci
+        working-directory: app1
+      - name: Run app
+        run: node .
+        working-directory: server
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
