--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -30,7 +30,7 @@ jobs:
            # Build and test the project, then
            # deploy to Azure Web App.
            cd vue-chess/server
-           npm install
+           npm ci
            #npm run build --if-present
            #npm run test --if-present
       
@@ -61,4 +61,4 @@ jobs:
           app-name: 'vue-chess'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C647F6EE39364678892B8CD030E8ED2B }}
-          package: ./vue-chess/server
+          package: .
