--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -30,7 +30,7 @@ jobs:
            # Build and test the project, then
            # deploy to Azure Web App.
            cd vue-chess/server
-           npm ci
+           npm install
            #npm run build --if-present
            #npm run test --if-present
       
