--- a/vue-chess/server/package.json
+++ b/vue-chess/server/package.json
@@ -29,7 +29,7 @@
     "hiredis": "^0.5.0",
     "jsonwebtoken": "latest",
     "moment": "^2.12.0",
-    "mongoose": "^5.0.18",
+    "mongoose": "latest",
     "mongoose-unique-validator": "^1.0.2",
     "morgan": "latest",
     "redis": "^2.6.2",
