--- a/vue-chess/server/package.json
+++ b/vue-chess/server/package.json
@@ -27,7 +27,7 @@
     "express-jwt": "latest",
     "formidable": "^1.0.17",
     "hiredis": "^0.5.0",
-    "jsonwebtoken": "latest",
+    "jsonwebtoken": "^5.11.10",
     "moment": "^2.12.0",
     "mongoose": "latest",
     "mongoose-unique-validator": "^1.0.2",
