--- a/vue-chess/server/package.json
+++ b/vue-chess/server/package.json
@@ -27,9 +27,9 @@
     "express-jwt": "latest",
     "formidable": "^1.0.17",
     "hiredis": "^0.5.0",
-    "jsonwebtoken": "^5.11.10",
+    "jsonwebtoken": "latest",
     "moment": "^2.12.0",
-    "mongoose": "latest",
+    "mongoose": "^5.11.10",
     "mongoose-unique-validator": "^1.0.2",
     "morgan": "latest",
     "redis": "^2.6.2",
