--- a/.github/workflows/main_vue-chess.yml
+++ b/.github/workflows/main_vue-chess.yml
@@ -31,8 +31,8 @@ jobs:
            # deploy to Azure Web App.
            cd vue-chess/server
            npm install
-           #npm run build --if-present
-           #npm run test --if-present
+           npm run build --if-present
+           npm run test --if-present
       
 
       - name: Upload artifact for deployment job
